Changes in pom.xml for java 11